# op-model-grader

./: .gitignore  LICENSE  README.md  pyproject.toml  start.bat  start.sh  start_linux.sh
opgrader/: __init__.py  __main__.py  cli.py  config.py  connect.py  counterfactual.py  download.py  events.py  extract.py  grading.py  gui.py  lateral.py  logreader.py  metrics.py  model_hashes.json  modelid.py  pipeline.py  profile.py  report.py  segments.py  speed_disagreement.py  vehicle_model.py  webui.py
opgrader/assets/: ui.html
tests/: conftest.py  test_aol.py  test_connect.py  test_counterfactual.py  test_e2e.py  test_encoding.py  test_events.py  test_grading.py  test_gui.py  test_lateral.py  test_metrics.py  test_mismatch.py  test_modelid.py  test_modes.py  test_profile.py  test_report.py  test_speed_disagreement.py  test_webui.py
