[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "op-model-grader"
description = "Grade your openpilot model's driving against your own manual driving, from rlogs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "pycapnp>=1.3",
  "zstandard>=0.21",
  "numpy>=1.24",
  "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
opgrader = "opgrader.cli:main"

[tool.setuptools]
packages = ["opgrader"]

[tool.setuptools.dynamic]
version = { attr = "opgrader.__version__" }

[tool.setuptools.package-data]
opgrader = ["schemas/**/*.capnp", "assets/uplot/*"]
